#1 - Change the design

--- a/src/app/asset-dialog/asset-dialog.component.html
+++ b/src/app/asset-dialog/asset-dialog.component.html
@@ -25,7 +25,7 @@
 
 
             <mat-form-field class="form-field" appearance="outline">
-                <mat-label> Data Owner
+                <mat-label> Decision Makers
                 </mat-label>
                 <input matInput formControlName="owner">
 
