--- a/src/app/history-dialog/history-dialog.component.html
+++ b/src/app/history-dialog/history-dialog.component.html
@@ -15,7 +15,7 @@
          </div>
  
          <div>
-             <span class="bold"> Data Owner: </span>{{asset.record.owner}}
+             <span class="bold"> Decision Makers: </span>{{asset.record.owner}}
          </div>
  
          <div>
