--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,3 +2,9 @@ h1{
     font-weight: bolder;
     font-size: larger;
 }
+
+.spacer {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+}
