--- a/src/app/asset-list/asset-list.component.html
+++ b/src/app/asset-list/asset-list.component.html
@@ -31,7 +31,7 @@
     
       <!-- Symbol Column -->
       <ng-container matColumnDef="owner">
-        <th mat-header-cell *matHeaderCellDef> Data Owner </th>
+        <th mat-header-cell *matHeaderCellDef> Decision Makers </th>
         <td mat-cell *matCellDef="let element"> {{element.owner}} </td>
       </ng-container>
     
