hotfix - change the ui

--- a/src/app/asset-dialog/asset-dialog.component.html
+++ b/src/app/asset-dialog/asset-dialog.component.html
@@ -34,7 +34,7 @@
 
 
             <mat-form-field class="form-field" appearance="outline">
-                <mat-label> Severity
+                <mat-label> Significance
                 </mat-label>
                 <input matInput formControlName="severity" type="number">
 
