hotfix - change-ui

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <h1>BT-RCPG Model | Micro Verbal Contracts <span style="font-style: italic; font-size: small; font-weight: normal "> From Decisions of the Construction Project Managers</span></h1>
+    <h1>BRCPG Model | Micro Verbal Contracts <span style="font-style: italic; font-size: small; font-weight: normal "> From Decisions of the Construction Project Managers</span></h1>
     <span class="menu-spacer"></span>
 
   </mat-toolbar-row>
